[package]
name = "libstarlight"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.*"
hex = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]
